syntax = "proto3";

package holms.types.reporting.rpc;
option csharp_namespace = "HOLMS.Types.Reporting.RPC";

import "booking/indicators/group_booking_indicator.proto";
import "reporting/outputs/html_report_response.proto";
import "booking/groups/group_bookings_invoices.proto";
import "primitive/pb_inclusive_opsdate_range.proto";
import "primitive/uuid.proto";

message FoliosReportingSvcCardCaptureReportingSvcReportResponse {
	string document = 1;
}

message BookingStatementRequest {
	.holms.types.booking.indicators.GroupBookingIndicator group_booking_indicator = 1;
	.holms.types.primitive.PbInclusiveOpsdateRange date_range = 2;
}

message FolioPaymentReceiptRequest{
	.holms.types.booking.indicators.GroupBookingIndicator group_booking_indicator = 1;
	.holms.types.primitive.Uuid payment_id=2;
	string payment_date=3;
	string payment_reference =4;
	string payment_type=5;
}

service FoliosReportingSvc {
	rpc GetBookingAssociatedFoliosDetail(.holms.types.booking.indicators.GroupBookingIndicator)
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

      	rpc GetBookingAssociatedFoliosSummary(.holms.types.booking.indicators.GroupBookingIndicator)
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

	rpc GetReservationFolioSummary(.holms.types.booking.indicators.GroupBookingIndicator) 
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

	rpc GetBookingWorksheetDetail(.holms.types.booking.indicators.GroupBookingIndicator)
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

	rpc GetInvoice(.holms.types.booking.groups.GroupBookingInvoiceMapping )
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

	rpc GetBookingStatement(BookingStatementRequest)
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

	rpc GetFolioPaymentReceipt(FolioPaymentReceiptRequest)
		returns(.holms.types.reporting.outputs.HtmlReportResponse);

}

